<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--Data item that holds the reminder details-->
        <variable
            name="reminderDataItem"
            type="com.udacity.project4.locationreminders.reminderslist.ReminderDataItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".locationreminders.ReminderDescriptionActivity">

        <TextView
            android:id="@+id/title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/reminder_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:text="@{reminderDataItem.title}"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/location_text"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sample_title" />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/reminder_desc"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintStart_toStartOf="@+id/title_label"
            app:layout_constraintTop_toBottomOf="@id/title_text" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:text="@{reminderDataItem.description}"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/location_text"
            app:layout_constraintTop_toBottomOf="@id/title_text"
            tools:text="@string/sample_description" />

        <TextView
            android:id="@+id/location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/reminder_location"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintStart_toStartOf="@+id/description_label"
            app:layout_constraintTop_toBottomOf="@id/description_text" />

        <TextView
            android:id="@+id/location_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@{reminderDataItem.location}"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/location_label"
            app:layout_constraintTop_toBottomOf="@id/description_text"
            tools:text="@string/sample_location" />

        <TextView
            android:id="@+id/latitude_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/reminder_Latitude"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintStart_toStartOf="@+id/location_label"
            app:layout_constraintTop_toBottomOf="@id/location_text" />

        <TextView
            android:id="@+id/latitude_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:text="@{reminderDataItem.latitude.toString()}"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/location_text"
            app:layout_constraintTop_toBottomOf="@id/location_text"
            tools:text="@string/sample_latitude" />

        <TextView
            android:id="@+id/longitude_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/reminder_Longitude"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintStart_toStartOf="@id/latitude_label"
            app:layout_constraintTop_toBottomOf="@id/latitude_text" />

        <TextView
            android:id="@+id/longitude_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:text="@{reminderDataItem.longitude.toString()}"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/location_text"
            app:layout_constraintTop_toBottomOf="@id/latitude_text"
            tools:text="@string/sample_longitude" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>